trunk/tests/should-not-compile/void-variable.talc
function void f() {}
// EXPECTED ERROR: variables such as "v" cannot have void type
v:void = f();
